examples/ok/t_assm_comp_2phase.zc
../all/t_assm_comp_2phase.zc