examples/fail/cramer_shoup_crush.zc
../all/cramer_shoup_crush.zc